# image_pipeline

camera_calibration/: CMakeLists.txt
depth_image_proc/src/nodelets/: disparity.cpp  point_cloud_xyz.cpp  point_cloud_xyz_radial.cpp  point_cloud_xyzi.cpp  point_cloud_xyzi_radial.cpp  point_cloud_xyzrgb.cpp  register.cpp
image_proc/src/nodelets/: crop_decimate.cpp  debayer.cpp  rectify.cpp  resize.cpp
image_proc/test/: CMakeLists.txt
image_publisher/src/nodelet/: image_publisher_nodelet.cpp
image_rotate/src/nodelet/: image_rotate_nodelet.cpp
image_view/: CMakeLists.txt
image_view/src/nodelets/: disparity_nodelet.cpp  image_nodelet.cpp
stereo_image_proc/src/nodelets/: disparity.cpp  point_cloud2.cpp
